# twin

./: .gitignore  Cargo.toml  README.md  design_doc.md
data/: manifest.json
data/projects/showcase/: project.json
data/projects/volve/: journal.jsonl  project.json
data/seeds/showcase/: journal.jsonl
data/showcase/: generate.py  wellpaths.csv  workorders.jsonl
data/volve/edm/: export.xml
data/volve/logs/: 15_9-F-14.las
data/volve/picks/: wellpicks.txt
data/volve/witsml/: drillReports.xml  trajectory.xml
examples/: bench.rs  milestone.rs
skills/obtain-oid/: SKILL.md  pull_oid.sh
skills/obtain-volve/: SKILL.md  pull_volve.sh
src/: adapter.rs  agent.rs  cognite.rs  definitions.rs  doc.rs  embed.rs  engine.rs  hashing.rs  inflate.rs  jsgraph.rs  las.rs  layers.rs  lib.rs  main.rs  ollama.rs  pdf.rs  pmap.rs  runtime.rs  server.rs  skills.rs  source.rs  sync.rs  witsml.rs  ws.rs  xlsx.rs  xml.rs
src/js/: graph.js  milestone.js  pbdatapoints.js  table.js  twin.js  views.js  zset.js
tauri/: Cargo.toml  README.md  tauri.conf.json
tauri/icons/: icon.icns
tauri/src/: lib.rs  main.rs
tests/: dataflow.rs  drilling.rs  milestone.rs  pb_decode.rs  real_witsml.rs  run_skill.rs  substrate.rs  twin_mount.rs  twin_perceive.rs  twin_schema.rs
web/: index.html
