[package]
name = "twin-runtime"
version = "0.1.0"
edition = "2021"
description = "An Incremental Runtime — a content-addressed, branchable digital-twin substrate on raw V8 (design_doc.md §14)."

[lib]
name = "twin_runtime"
path = "src/lib.rs"

[[bin]]
name = "twin"
path = "src/main.rs"

[[bin]]
name = "serve"
path = "src/bin/serve.rs"

[[bin]]
name = "twin-sync"
path = "src/bin/sync_cli.rs"
required-features = ["sync"]

[dependencies]
v8 = "130"
sha2 = "0.10"
serde_json = "1"

# Serverless peer sync rides behind an OFF-BY-DEFAULT feature: the default build
# stays v8/sha2/serde_json. `--features sync` pulls iroh — dial a node by its
# public key and it finds a route (hole-punching, relay fallback) — and the tokio
# it runs on. The merge logic itself (src/sync.rs) compiles always, dependency-free.
iroh = { version = "1", optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "io-util", "time", "macros"], optional = true }

[features]
sync = ["dep:iroh", "dep:tokio"]

[profile.release]
opt-level = 3
lto = "thin"
